# orthodoxy

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: orthodoxy.yml
cmake/: orthodoxyConfig.cmake.in
pkgconfig/: orthodoxy-for-clang.pc.in
scripts/: orthodox-compiler.sh.in  test-cpp.py
src/: astconsumer.cpp  astconsumer.h  config.cpp  config.h  configmanager.cpp  configmanager.h  diag.cpp  diag.h  diag.inc  diagdesc.cpp  diagdesc.h  main.cpp  stdafx.h  utility.cpp  utility.h
test/access/: orthodoxy.yml  test.cpp
test/assignment-operator/: orthodoxy.yml  test.cpp
test/auto/: orthodoxy.yml  test.cpp
test/auto-return/: orthodoxy.yml  test.cpp
test/auto-variable/: orthodoxy.yml  test.cpp
test/c-style-cast/: orthodoxy.yml  test.cpp
test/class/: orthodoxy.yml  test.cpp
test/const-cast/: orthodoxy.yml  test.cpp
test/constructor/: orthodoxy.yml  test.cpp
test/conversion-constructor/: orthodoxy.yml  test.cpp
test/conversion-overload/: orthodoxy.yml  test.cpp
test/copy-assignment-operator/: orthodoxy.yml  test.cpp
test/copy-constructor/: orthodoxy.yml  test.cpp
test/default-argument/: orthodoxy.yml  test.cpp
test/destructor/: orthodoxy.yml  test.cpp
test/dynamic-cast/: orthodoxy.yml  test.cpp
test/enum-class/: orthodoxy.yml  test.cpp
test/exception/: orthodoxy.yml  test.cpp
test/function-overload/: orthodoxy.yml  test.cpp
test/implicit-this/: orthodoxy.yml  test.cpp
test/include-allow/: orthodoxy.yml  test.cpp
test/include-forbid/: orthodoxy.yml  test.cpp
test/inheritance/: orthodoxy.yml  test.cpp
test/inheritance-access/: orthodoxy.yml  test.cpp
test/lambda/: orthodoxy.yml  test.cpp
test/lambda-capture/: orthodoxy.yml  test.cpp
test/macro-expansion/: orthodoxy.yml  test.cpp
test/member-access/: orthodoxy.yml  test.cpp
test/move-assignment-operator/: orthodoxy.yml  test.cpp
test/move-constructor/: orthodoxy.yml  test.cpp
test/mutable/: orthodoxy.yml  test.cpp
test/named-cast/: orthodoxy.yml  test.cpp
test/namespace/: orthodoxy.yml  test.cpp
test/namespace-depth/: orthodoxy.yml  test.cpp
test/new/: orthodoxy.yml  test.cpp
test/non-pod/: test.cpp
test/non-standard-layout/: orthodoxy.yml  test.cpp
test/non-trivial/: orthodoxy.yml  test.cpp
test/operator-overload/: orthodoxy.yml  test.cpp
test/overload/: orthodoxy.yml  test.cpp
test/range-based-loop/: orthodoxy.yml  test.cpp
test/reference/: orthodoxy.yml  test.cpp
test/reference-to-non-const/: orthodoxy.yml  test.cpp
test/reinterpret-cast/: orthodoxy.yml  test.cpp
test/rvalue-reference/: orthodoxy.yml  test.cpp
test/static-cast/: test.cpp
test/template/: orthodoxy.yml  test.cpp
test/template-non-pod/: orthodoxy.yml  test.cpp
test/throw/: orthodoxy.yml  test.cpp
test/try-catch/: orthodoxy.yml  test.cpp
test/user-defined-literal/: orthodoxy.yml  test.cpp
test/virtual-inheritance/: orthodoxy.yml  test.cpp
